<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Fehler_und_Ausgleichsrechnung">Fehlerrechnung</string>
    <string name="berechne">Berechne</string>
    <string name="aktuell_fest">fest</string>
    <string name="aktuell_fluessig">flüssig</string>
    <string name="AC">Alle\nEingaben\nlöschen</string>
    <string name="AC2">Einheiten\nzurück\nsetzen</string>
    <string name="CE">Letzte\nEingabe\nlöschen</string>
    <string name="g_l">g/l</string>
    <string name="mg_ml">mg/ml</string>
    <string name="g_ml">g/ml</string>
    <string name="mg_l">mg/l</string>
    <string name="ppm">ppm</string>
    <string name="ug_l">µg/l</string>
    <string name="ppb">ppb</string>
    <string name="mg_g">mg/g</string>
    <string name="ug_ml">µg/ml</string>
    <string name="ug">µg</string>
    <string name="mg">mg</string>
    <string name="g">g</string>
    <string name="ul">µl</string>
    <string name="ml">ml</string>
    <string name="l">l</string>
    <string name="Drei_Fragezeichen">Konzentration</string>
    <string name="eingabe">weitere Eingabe?</string>
    <string name="Berechnung_der_Endkonzentration_einer_Verdünnung_oder_Verdünnungsreihe">Berechnung der Endkonzentration\neiner Verdünnung(-sreihe)!</string>
    <string name="Berechnung_der_Endkonzentration">Berechnung der Endkonzentration</string>
    <string name="Berechnung_der_Anfangskonzentration_einer_Verdünnung_oder_Verdünnungsreihe">Berechnung der Anfangskonzentration\neiner Verdünnung(-sreihe)!</string>
    <string name="Berechnung_der_Anfangskonzentration">Berechnung der Anfangskonzentration</string>
    <string name="Anzahl_Messwerte">Anzahl der Messwerte = </string>
    <string name="Mittelwert">arithmetischer Mittelwert = </string>
    <string name="Standardabweichung">Standardabweichung = </string>
    <string name="relative_RSD">% RSD = </string>
    <string name="Clear_alle">Alle Eingaben\nlöschen</string>
    <string name="Clear_last">Letzte Eingabe\nlöschen</string>
    <string name="Liste">Eingabeliste\nanzeigen</string>
    <string name="letzter_Messwert">letzter Eingabe-Meßwert = </string>
    <string name="Gehalt_ext">Gehaltsberechnung über einen externen Standard</string>
    <string name="Gehalt_int">Gehaltsberechnung über einen internen Standard</string>
    <string name="Titel_Eingabeliste">Eingabeliste</string>
    <string name="Eingabeliste_Ueb1">Eingabe</string>
    <string name="Eingabeliste_Ueb2">Absol. Abw.</string>
    <string name="Zurucksetzen_aller">Zurücksetzen aller Säuren und Laugen\nStandardwerte wiederherstellen?</string>
    <string name="ja">ja</string>
    <string name="nein">nein</string>
    <string name="QuizHilfe_1">Auf deinem Display siehst du jetzt das Periodensystem der Elemente. Und zwar erst einmal nur die Hauptgruppenelemente!
        Für jedes Element gibt es einen Button mit einem entsprechenden Symbol. Von "H" bis "Ra" unten links in der Ecke müssen alle Felder angezeigt werden.
        Kannst du nicht das komplette PSE sehen, weil dein Bildschirn zu klein ist, musst du die Größe der Element-Felder im Menue "Molmassen" oder im Hauptmenue
        vom Quiz mit dem weißen Schraubenschlüssel auf blauen Grund anpassen.
        Oben links in der Ecke wird dir der erste Name eines Elementes angezeigt. Für dieses Element musst du jetzt auf deinem Display das entsprechende
        Symbol raussuchen und antippen. Achtung, hast du deinen ersten Tipp gemacht, läuft deine Zeit! Du hast genau 60 Sekunden. Deine verbleibende Zeit
        siehst du in dem kleinen blauen Feld oben rechts in der Ecke. Liegst du mit deiner Wahl des Kurzzeichens richtig, ertönt eine Glocke und es
        erscheint oben links sofort das nächste Element und du bekommst einen Punkt gutgeschrieben. Deinen aktuellen Punktestand siehst du ebenfalls
        in der rechten oberen Ecke. War deine Auswahl des Kurzzeichens falsch, fängt dein Smartphone kurz an zu vibrieren und du kannst es erneut versuchen.
        Weißt du gar nicht weiter, kommst du mit dem grauen „Weiter“ Button oben rechts zum nächsten Element.
        Danach wird dir unten Im Display kurz die richtige Formel als rote Meldung
        angezeigt. Aber Vorsicht! Jedes Mal, wenn du den „Weiter“ Button drückst, wird dir zur Strafe wieder ein Punkt abgezogen. Ist deine Zeit um, wird dir
        im Anzeigefeld deiner Eingabe noch das richtige Zeichen angezeigt. Wenn du es schaffst 15 Punkte zu erreichen ertönt eine Hupe und du darfst
        Level 2 spielen. Was da kommt? Streng dich an und lass dich überraschen!
    </string>
    <string name="QuizHilfe_2"> Jetzt testen wir bei dir die Symbole von den Nebengruppenelementen! Das PSE sieht jetzt
        etwas anders aus. Aber du wirst die Symbole schon finden. Von der Bedienung hat sich nichts geändert! </string>
    <string name="QuizHilfe_3">Jetzt wird es etwas schwieriger und etwas anders. Etwas! In Level 3 werden dir
        Nomenklatur-Namen von Verbindungen angezeigt und du musst die dazu gehörige Formel eingeben. Und zwar sowohl mit Elementen aus den Hauptgruppen,
        als auch aus den Nebengruppen. Aber die kennst du ja jetzt. Willst du zu den Nebengruppenelementen wechseln, drückst du einfach den großen gelben
        „Hauptgruppenelemente“ Button und noch einmal um wieder zu den Hauptgruppenelementen zurück zu kehren. Hast du das erste Element eingetippt,
        erscheint es als Symbol oben links auf dem Display! Um die ganze Formel einzugeben, stehen dir zu den Symbolen ebenfalls die Klammern und die
        Indexzahlen (Hauptgruppe Ziffer 0 bis 4 und Nebengruppe Ziffer 5 bis 9) zur Verfügung. Mit der ← Taste kannst du deine Eingabe wieder löschen.
        In welcher Reihenfolge du die Elemente am Ende eingibst ist egal. Beispiel: NH3, HHHN, H3N oder HNHH führt zu dem gleichen Ergebnis!
        Wenn deine Eingabe richtig ist, erscheint sofort die nächste Verbindung. Ab jetzt bekommst du für jede richtige Formeleingabe 4 Punkte.
        Eine falsche Eingabe der Formel ist nicht möglich! Wenn du die Formel allerdings nicht heraus bekommst, kannst du auch hier mit dem „Weiter“
        Button unter Abzug eines Strafpunktes, zur nächsten Verbindung springen. Alles andere ist gleich geblieben. </string>
    <string name="QuizHilfe_4"> Jetzt werden chemische Formeln mit 3 Elementen abgefragt und du
        bekommst jetzt für jede richtige Eingabe 6 Punkte. </string>
    <string name="QuizHilfe_5">Genau, jetzt kommen chemische Formeln mit 4 Elementen dran.
        Bei einigen Verbindungen könnte es sich um einen Komplex handeln, bei der eine Schreibweise mit eckigen Klammern geläufig ist.
        Diese Klammern sind bei der Eingabe nicht relevant. Du kannst sie einfach weglassen. </string>
    <string name="QuizHilfe_6">In Level 6 werden Trivialnamen und englische
        Bezeichnungen abgefragt. Trivialnamen sind umgangssprachliche Bezeichnungen für chemische Verbindungen. Z.B. ist für
        Natriumchlorid der Trivialname Kochsalz. </string>
    <string name="QuizHilfe_7"> Jetzt kommt ein ganz neues Gebiet. Die Organische Chemie! Da es in der organischen Chemie viele Isomere gibt,
        das sind Verbindungen mit der gleichen Gesamtzusammensetzung (Summenformel), aber unterschiedlicher Struktur (Strukturformel), können diese
        durch die Summenformelschreibweise nicht erkannt werden und bleiben unberücksichtigt! In diesem ersten Level der Organischen Chemie werden
        die einfachen Kohlenwasserstoffe abgefragt. Kohlenstoffverbindungen bestehend NUR aus Kohlenstoff und Wasserstoff. Alkane, Alkene, Alkine und Cycloalkane.
        Einfach-, Doppel-, Dreifach, und Ringverbindungen von C-Atomen. Wenn du die Homologe Reihe kennst, lässt sich die Anzahl der Wasserstoffatome in der
        Formel ganz einfach bestimmen. Alkane: Anzahl H-Atome = C-Atome x 2 + 2, Alkene: Anzahl H-Atome = C-Atome x 2,
        Alkine: Anzahl H-Atome = C-Atome x 2 - 2 und Cycloalkane: Anzahl H-Atome = C-Atome x 2. Beispiel Hexin: Hex, also gleich C6.
        -in, also eine Dreifachbindung. Das heißt zweimal 6 gleich 12. Minus 2 gleich 10. Die Formel lautet C6H10.
        Du musst ab jetzt also mehr rechnen, dann ist es ganz einfach! </string>
    <string name="QuizHilfe_8">In Level 8 wird dein Wissen über Alkohole, Aldehyde, Ketone, Ether und Ester getestet. Eine kurze Erläuterung zu den Gruppen:
        \n Alkohole: R-OH \n Aldehyde: R-COH \n Ketone: R-CO \n Ether: R-O-R’ \n Ester: R-COO-R’ \n R ist immer eine Kohlenwassersoffrest, der unterschiedlich
        lang sein kann. Da die Verbindung ja wieder als Summenformel eingibst, spielt es keine Rolle an welcher Stelle du die Elemente setzt. \n
        Beispiel: Ethanol würde man als Strukturformel ungefähr so schreiben: CH3-CH2-OH. Ob du jetzt CH3CH2OH schreibst, C2H5OH oder OC2H6 ist egal.</string>
    <string name="QuizHilfe_9">In Level 9 wird es sehr schwer. Hier geht es um folgende funktionelle Gruppen: \n
        Carbonsäuren: R-COOH \n Amine: R-NH2 \n Nitrile: R-C≡N \n Nitroverbidungen: R-NO2 \n Halogenide: R-Hal \n
        In einigen Carbonsäuren sind auch Doppelbindungen versteckt. Also auf die genaue Bezeichnung achten!</string>
    <string name="QuizHilfe_0">Jetzt kommt der letzte Level. In Level 10 geht es um Alles. Alle funktionelle Gruppen mit Einfach-, Doppel- und Dreifachbindungen.
        Keine leichte Aufgabe.</string>
    <string name="ButtonEinstellungen">(Button: weißer Schlüssel - blauer Hintergrund) Unter Einstellungen lässt sich die Anzahl der
        gerundeten Nachkommastellen von dem errechneten Ergebnis einstellen. Desweiteren lässt sich bei einigen Layouts die Schriftgröße
        und Buttonhöhe individuell anpassen.</string>
    <string name="ButtonEinstellungen_0">Hier können keine Einstellungen vorgenommen werden!</string>
    <string name="ButtonEinstellungen_NKS">(Button: weißer Schlüssel - blauer Hintergrund) Unter Einstellungen lässt sich die Anzahl der
        gerundeten Nachkommastellen von dem errechneten Ergenis einstellen.</string>
    <string name="ButtonEinstellungen_SG_BH">(Button: weißer Schlüssel - blauer Hintergrund) Unter Einstellungen lässt sich die
        Schriftgröße und Buttonhöhe individuell anpassen.</string>
    <string name="ButtonEinstellungen_NE_BE">Unter Einstellungen kann entweder die Netto- oder Bruttoeiwaage eingestellt werde.
        Nettoeinwaage: Wurde die Nettoeinwaage ausgewählt, dann muss in diesem Eingabefeld das reine Gewicht
        der Probe eingegeben werden. Das reine Nettogewicht erhält man in der Regel, wenn man vor der Einwaage der Probe auf der
        Waage die Tara Taste betätigt, damit das Gewicht des Gefäßes auf 0,000 gesetzt wird. Bruttoeinwaage: Wurde die
        Bruttoeinwaage ausgewählt, dann muss in diesem Eingabefeld das gesammte Gewicht der Probe inklusive des Probengefäßes
        eingegeben werden.</string>
    <string name="ButtonHome">(Button: schwarzes Haus - weißer Kreis) Mit diesem Button kehrt man zum Hauptmenü zurück.</string>
    <string name="ButtonBeenden">(Button: weißes Kreuz - roter Hintergrund) Wird dieser Button 2x betätigt, wird die App beendet.</string>
</resources>
