<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout7"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/cEingabe"
        android:gravity="center_vertical|center_horizontal"
        android:minEms="50"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:text="@string/Titel_Eingabeliste"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cBlau"
        android:textColorHint="@color/cBlau" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center_horizontal"
            android:text="@string/Eingabeliste_Ueb1" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center_horizontal"
            android:text="@string/Eingabeliste_Ueb2" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:stretchMode="spacingWidthUniform" />
</LinearLayout>
