<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".EinwaageActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btnWeiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/chellhellgrau"
            android:minEms="6"
            android:onClick="btnWeiter"
            android:text="@string/naechster_wert"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/cSchwarz" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/chellhellgrau"
            android:minEms="6"
            android:onClick="btnClear"
            android:text="@string/Clear_all"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/cSchwarz" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cHellblau"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:minEms="50"
            android:text="@string/Fehler_und_Ausgleichsrechnung"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/cBlau"
            android:textColorHint="@color/cBlau" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cHellorange"
                android:gravity="center_horizontal"
                android:text="@string/Anzahl_Messwerte"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvAnzahl_Messwert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/cHellorange"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cHellorange"
                android:gravity="center_horizontal"
                android:text="@string/Mittelwert"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_Mittelwert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/cHellorange"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz"
                android:textSize="14sp" />

        </TableRow>
        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cHellorange"
                android:gravity="center_horizontal"
                android:text="@string/Standardabweichung"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvStandardabweichung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/cHellorange"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/cHellorange"
                android:gravity="center_horizontal"
                android:text="@string/relative_RSD"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvRSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:background="@color/cHellorange"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cSchwarz"
                android:textSize="22sp" />

        </TableRow>

        <TableRow
            android:id="@+id/Eingabewert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/Eingabewert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/chellhellgrau"
                android:ellipsize="start"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/eingabe"
                android:inputType="numberDecimal"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textColor="@color/cSchwarz"
                android:textColorHint="@color/cGold"
                android:textSize="22sp" />

        </TableRow>

    </TableLayout>

</TableLayout>